modules/gdscript/tests/scripts/analyzer/errors/for_loop_on_literal_bool.gd
func test():
	for x in true:
		pass
